# Backen_learning

./: Backend-structure.md  main.py  pyproject.toml
app/api/: get_profile_route.py  loggin_route.py  profile.py  token_route.py  update_profile.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: login_db.py  profile_db.py
app/schema/: loggin.py  profile.py
